syntax = "proto3";

package prpc;

option go_package = "./prpc";

message Danmaku {
  string id = 1;
  int64 user_id = 2;
  string user_name = 3;
  int64 s_time = 4;
  string text = 5;
  int32 type = 6;
  int32 color = 7;
  double d_time = 8;
}